src/objects/Invoice_Line_Item_MERC__c.object
<CustomObject>
    <description>Object to store invoice line item information. Created on 9/28/2013 by KLorenti</description>
    <fields>
        <fullName>Amount_Adhoc_Consulting_MERC__c</fullName>
        <description>Used to capture a manually typed value for ad hoc consulting services.  Oliver Dunford 13th Dec.</description>
        <label>Ad hoc Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_MERC__c</fullName>
        <description>Amount of Line Item
Created by John A Adams 10/31/2013</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Element_MERC__c</fullName>
        <description>Selection of cost elements to select for Invoice items 
Created by John A Adams 10/15/2013
NOTE: needs final list from Lilly</description>
        <label>Cost Element</label>
        <picklist>
            <picklistValues>
                <fullName>Speaking Services - 9078</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation - 4566</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio Visual - 1233</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage - 6788</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tavel - 1456 (Belgium)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel - 4866</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description_MERC__c</fullName>
        <description>Line Item Description
Created by John A Adams 10/4/2013</description>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_of_Service_MERC__c</fullName>
        <description>Retrieves total hours of service from HPC Contract
Created by John A Adams 10/21/2013</description>
        <formula>IF (ISPICKVAL(Cost_Element_MERC__c, &quot;Speaking Services - 9078&quot;), 

 (Invoice_MERC__r.Meeting_Participant_MERC__r.Total_Hours_of_Service_MERC__c ),

  Null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours of Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Cost_Center_MERC__c</fullName>
        <formula>Invoice_MERC__r.Cost_Center_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Cost Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_MERC__c</fullName>
        <description>Master-Detail relationship to Invoice object. Created 9/28/2013 by KLorenti</description>
        <label>Invoice</label>
        <referenceTo>Invoice_MERC__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_MERC__c</fullName>
        <description>Quantity of line items
Created by John A Adams 10/27/2013</description>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_MERC__c</fullName>
        <description>Tax Amount (currency, calc based on value &amp; tax rate) 
Created by John A Adams 10/4/2013</description>
        <formula>Amount_MERC__c *(VAT_Rate_MERC__c / 100) + Unit_Price_MERC__c *( VAT_Rate_MERC__c /100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price_MERC__c</fullName>
        <description>Unit Price of Line Items.
Created by John A Adams 10/27/2013</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Description_MERC__c</fullName>
        <description>Description of VAT rate
Created by John A Adams 10/24/2013</description>
        <label>VAT Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Rate_MERC__c</fullName>
        <description>Tax Rate Percentage
Created by John A Adams 10/4/2013</description>
        <label>VAT Rate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>IL-{000000}</displayFormat>
        <label>Invoice Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <recordTypes>
        <fullName>Ad_Hoc_Consulting</fullName>
        <active>true</active>
        <description>To represent ad hoc consulting engagements.</description>
        <label>Ad Hoc Consulting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contracted_Services_MERC</fullName>
        <active>true</active>
        <description>Services provided by HCP or Non-HCP under contract</description>
        <label>Contracted Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Items</fullName>
        <active>true</active>
        <description>Other items for reimburments</description>
        <label>Other Items</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>